[gd_scene format=3 uid="uid://cxp7rk00ycx6d"]

[ext_resource type="Script" uid="uid://cni702hwbmul2" path="res://scripts/level_1.gd" id="1_6iamk"]
[ext_resource type="Texture2D" uid="uid://bx2xf3mnwjgc" path="res://assets/backgrounds/Background1.png" id="1_ksju7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ksju7"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.3137255, 0.15686275, 0.11764706, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.23529412, 0.15686275, 0.11764706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6iamk"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.15686275, 0.19607843, 0.3137255, 0.6)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.39215687, 0.5882353, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 3
corner_detail = 5
shadow_color = Color(nan, nan, nan, 0.5882353)

[node name="Level1" type="Control" unique_id=1972667225]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6iamk")

[node name="Background1" type="Sprite2D" parent="." unique_id=1922411950]
position = Vector2(640, 362)
scale = Vector2(0.9984375, 1.0083333)
texture = ExtResource("1_ksju7")

[node name="ProgressBarContainer" type="Control" parent="." unique_id=1598194230]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TrackPanel" type="Panel" parent="ProgressBarContainer" unique_id=431172]
custom_minimum_size = Vector2(1100, 40)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ksju7")

[node name="EndStation" type="Label" parent="ProgressBarContainer" unique_id=999414970]
layout_mode = 0
offset_left = 1150.0
offset_top = 25.0
offset_right = 1194.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 32
text = "üè¢"

[node name="TrainIcon" type="Label" parent="ProgressBarContainer" unique_id=2137690679]
layout_mode = 0
offset_left = 90.0
offset_top = 20.0
offset_right = 145.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 40
text = "üöÇ"

[node name="ModalOverlay" type="ColorRect" parent="." unique_id=1457401628]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.43137255)

[node name="PopupPanel" type="PanelContainer" parent="." unique_id=948116837]
visible = false
custom_minimum_size = Vector2(900, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6iamk")

[node name="PopupMargin" type="MarginContainer" parent="PopupPanel" unique_id=363879723]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="PopupContent" type="VBoxContainer" parent="PopupPanel/PopupMargin" unique_id=916679985]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PopupTitle" type="Label" parent="PopupPanel/PopupMargin/PopupContent" unique_id=1733284492]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9019608, 0.39215687, 1)
theme_override_font_sizes/font_size = 36
text = "Introduction to Networks"
horizontal_alignment = 1

[node name="ContentText" type="Label" parent="PopupPanel/PopupMargin/PopupContent" unique_id=1785765191]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "What is a network?

A network is a group of computers and devices that are connected together. Think of it like a team where all members can talk to each other and share things."
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="PopupPanel/PopupMargin/PopupContent" unique_id=1286292444]
layout_mode = 2
theme_override_colors/font_color = Color(0.78431374, 0.78431374, 0.78431374, 1)
theme_override_font_sizes/font_size = 18
text = "Slide 1 / 3"
horizontal_alignment = 1

[node name="AnswerButtons" type="VBoxContainer" parent="PopupPanel/PopupMargin/PopupContent" unique_id=1700619641]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="AnswerA" type="Button" parent="PopupPanel/PopupMargin/PopupContent/AnswerButtons" unique_id=185828489]
custom_minimum_size = Vector2(800, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "A) Option here"
alignment = 0

[node name="AnswerB" type="Button" parent="PopupPanel/PopupMargin/PopupContent/AnswerButtons" unique_id=1086539873]
custom_minimum_size = Vector2(800, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "A) Option here"
alignment = 0

[node name="AnswerC" type="Button" parent="PopupPanel/PopupMargin/PopupContent/AnswerButtons" unique_id=1912442968]
custom_minimum_size = Vector2(800, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "A) Option here"
alignment = 0

[node name="NavButtons" type="HBoxContainer" parent="PopupPanel/PopupMargin/PopupContent" unique_id=302746882]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PrevButton" type="Button" parent="PopupPanel/PopupMargin/PopupContent/NavButtons" unique_id=1541328446]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "‚Üê Back"

[node name="NextButton" type="Button" parent="PopupPanel/PopupMargin/PopupContent/NavButtons" unique_id=1920657507]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Next ‚Üí"

[node name="FeedbackLabel" type="Label" parent="PopupPanel/PopupMargin/PopupContent" unique_id=1811759196]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="TopRightAnchor" type="Control" parent="PopupPanel" unique_id=389604240]
visible = false
layout_mode = 2

[node name="CloseButton" type="Button" parent="PopupPanel/TopRightAnchor" unique_id=442927629]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 57.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "‚úï"
flat = true
